refactor: enhance documentation with detailed comments for improved clarity and maintainability